@@ -17,6 +17,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/c_misc.c: ensure you can't harvest items already harvested, or skills and such.
+Nicolas Weeger 2007-04-30
+
 server/monster.c: fix bug #1709618: Text message is too long/truncated.
 Nicolas Weeger 2007-04-30
 
